--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ cloudinary==1.33.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.20
+django-admin-rangefilter==0.10.0
 django-allauth==0.54.0
 django-crispy-forms==1.14.0
+django-daterangefilter==1.0.0
+django-phonenumber-field==7.1.0
 django-summernote==0.8.20.0
 gunicorn==21.2.0
 oauthlib==3.2.2
+phonenumbers==8.13.17
 psycopg2==2.9.6
 PyJWT==2.8.0
 python3-openid==3.2.0
